[gd_scene load_steps=3 format=3 uid="uid://d3b78koc4b5d1"]

[ext_resource type="Script" uid="uid://2qfva0ucssmh" path="res://level_up_menu.gd" id="1_pn0h5"]

[sub_resource type="LabelSettings" id="LabelSettings_25e3i"]
font_size = 100
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.3529412)
shadow_offset = Vector2(5, 5)

[node name="LevelUpMenu" type="CanvasLayer"]
script = ExtResource("1_pn0h5")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 1, 0.39215687)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
label_settings = SubResource("LabelSettings_25e3i")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 100
alignment = 1

[node name="ChoiceButton1" type="Button" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 0.39215687)
theme_override_font_sizes/font_size = 50
text = "1"

[node name="ChoiceButton2" type="Button" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 0.39215687)
theme_override_font_sizes/font_size = 50
text = "2"

[node name="ChoiceButton3" type="Button" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0.39215687)
theme_override_font_sizes/font_size = 50
text = "3"
